# HOCO

HOCO/postgresql-16.0/: INSTALL  env-debug  log
HOCO/postgresql-16.0/contrib/amcheck/: verify_heapam.c
HOCO/postgresql-16.0/contrib/hocotext/: Makefile  hocotext--1.0.sql  hocotext.c  hocotext.h  hocotext_lz4.c  hocotext_rle.c  meson.build
HOCO/postgresql-16.0/src/backend/catalog/: Makefile  meson.build  pg_compression_index.c  pg_max_comp_index_pointer.c
HOCO/postgresql-16.0/src/common/: rle_compress.c
HOCO/postgresql-16.0/src/include/: fmgr.h  varatt.h
HOCO/postgresql-16.0/src/include/access/: detoast.h  heaptoast.h  tableam.h  toast_compression.h  toast_helper.h  toast_internals.h
HOCO/postgresql-16.0/src/include/catalog/: meson.build  pg_compression_index.h  pg_max_comp_index_pointer.h
HOCO/postgresql-16.0/src/include/common/: rle_compress.h
doc/tadoc-doc/: tadoc-doc.md
postgresql-16.0/: INSTALL  compile.sh
postgresql-16.0/contrib/hocotext/: Makefile  hocotext--1.0.sql  hocotext.c  hocotext.control  meson.build
postgresql-16.0/src/common/: Makefile  classes.cc  compression.c  meson.build  rle_compress.c  tadoc_compress.c  tadoc_compress.cc
postgresql-16.0/src/include/access/: toast_internals.h
postgresql-16.0/src/include/common/: compression.h  rle_compress.h  tadoc_compress.h  tadoc_compress.hh
postgresql-16.0/src/tools/msvc/: Mkvcbuild.pm
postgresql-16.0/src/tools/pgindent/: typedefs.list
unit-test/: example.txt  sequitur  sequitur.cc  tadoc  tadoc.c  tadoc.h  test-sequitur.sh  test.sh
(+19 files in other folders)
